# automake

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
doc/: Makefile.in
lib/: Makefile.in
lib/Automake/: Makefile.in
lib/Automake/tests/: Makefile.in
lib/am/: Makefile.in
m4/: Makefile.in  amversion.m4
tests/: Makefile.am  Makefile.in  aclocal-search-path.test  defs  defs-static.in  java-compile-run-flat.test  java-compile-run-nested.test  maken2.test  maken4.test  parallel-tests3.test  self-check-cleanup.tap  self-check-dir.tap  self-check-env-sanitize.tap  self-check-exit.tap  self-check-explicit-skips.test  self-check-me.tap  self-check-reexec.tap  self-check-sanity.test  self-check-tap.test  suffix13.test  vala2.test  vala3.test  vala5.test
